--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     <input class="input-horizontal" id="range" type="range" min="-50" value="8" max="50">
                     <label class="label-horizontal" for="input-horizontal"></label>
                 </div>
-                <div class="box-generator__vertical">
+                <div class="box-generator__vertical --flex">
                     <p class="box-generator__title">Vertical</p>
                     <input class="input-vertical" id="range" type="range" min="-50" value="8" max="50">
-                    <label class="label-vertical" for="input-vertical"></label>
+                    <span class="label-vertical --label"></span>
                 </div>
                 <div class="box-generator__blur">
                     <p class="box-generator__title">Blur</p>
@@ -43,16 +43,18 @@
                     <input id="input-color" type="color">
                     <p>color</p>
                 </div>
-            </div>
-            <div class="box-generator__second">
-                <div class="box-generaror__elm" style="box-shadow: 0px 0px 0px 0px black; 
-                width: 200px;"></div>
-                <div class="box-generato__width"">
+
+                <div class="box-generato__width">
                     <p class=" box-generator__title">Width</p>
                     <input class="input-width" id="range" type="range" min="100" value="200" max="300">
                     <label class="label-width" for="range"></label>
                 </div>
             </div>
+            <div class="box-generator__second">
+                <div class="box-generaror__elm" style="box-shadow: 0px 0px 0px 0px black; 
+                width: 200px;"></div>
+            </div>
+
         </div>
     </div>
 
