box-generator complete taskkk 31.08.2024

--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
             <div class="box-generator__first">
                 <div class="box-generator__horizontal">
                     <p class="box-generator__title">Horizontal offset</p>
+                    <label class="label-horizontal" for="input-horizontal">8</label>
                     <input class="input-horizontal" id="range" type="range" min="-50" value="8" max="50">
-                    <label class="label-horizontal" for="input-horizontal"></label>
                 </div>
-                <div class="box-generator__vertical --flex">
+                <div class="box-generator__vertical">
                     <p class="box-generator__title">Vertical</p>
+                    <label class="label-vertical" for="input-vertical">8</label>
                     <input class="input-vertical" id="range" type="range" min="-50" value="8" max="50">
-                    <span class="label-vertical --label"></span>
                 </div>
                 <div class="box-generator__blur">
                     <p class="box-generator__title">Blur</p>
+                    <label class="label-blur" for="input-blur">0</label>
                     <input class="input-blur" id="range" type="range" min="0" value="24" max="50">
-                    <label class="label-blur" for="input-blur"></label>
                 </div>
                 <div class="box-generator__spread">
                     <p class="box-generator__title">Spread</p>
+                    <label class="label-spread" for="input-spread">0</label>
                     <input class="input-spread" id="range" type="range" min="-50" value="0" max="50">
-                    <label class="label-spread" for="input-spread"></label>
                 </div>
                 <div class="box-generator__inset">
                     <input id="input-inset" type="checkbox">
@@ -46,8 +46,8 @@
 
                 <div class="box-generato__width">
                     <p class=" box-generator__title">Width</p>
+                    <label class="label-width" for="range">200</label>
                     <input class="input-width" id="range" type="range" min="100" value="200" max="300">
-                    <label class="label-width" for="range"></label>
                 </div>
             </div>
             <div class="box-generator__second">
