--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
             <div class="box-generator__first">
                 <div class="box-generator__horizontal">
                     <p class="box-generator__title">Horizontal offset</p>
-                    <label class="label-horizontal" for="input-horizontal">8</label>
+                    <input class="number-horizontal" type="number" min="-50" value="8" max="50">
                     <input class="input-horizontal" id="range" type="range" min="-50" value="8" max="50">
                 </div>
                 <div class="box-generator__vertical">
                     <p class="box-generator__title">Vertical</p>
-                    <label class="label-vertical" for="input-vertical">8</label>
+                    <input class="number-vertical" type="number" min="-50" value="8" max="50">
                     <input class="input-vertical" id="range" type="range" min="-50" value="8" max="50">
                 </div>
                 <div class="box-generator__blur">
                     <p class="box-generator__title">Blur</p>
-                    <label class="label-blur" for="input-blur">0</label>
+                    <input class="number-blur" type="number" min="-50" value="0" max="50">
                     <input class="input-blur" id="range" type="range" min="0" value="24" max="50">
                 </div>
                 <div class="box-generator__spread">
                     <p class="box-generator__title">Spread</p>
-                    <label class="label-spread" for="input-spread">0</label>
+                    <input class="number-spread" type="number" min="-50" value="0" max="50">
                     <input class="input-spread" id="range" type="range" min="-50" value="0" max="50">
                 </div>
                 <div class="box-generator__inset">
@@ -46,7 +46,7 @@
 
                 <div class="box-generato__width">
                     <p class=" box-generator__title">Width</p>
-                    <label class="label-width" for="range">200</label>
+                    <input class="number-width" type="number" min="100" value="200" max="300">
                     <input class="input-width" id="range" type="range" min="100" value="200" max="300">
                 </div>
             </div>
