--- a/index.html
+++ b/index.html
@@ -54,7 +54,16 @@
                 <div class="box-generaror__elm" style="box-shadow: 0px 0px 0px 0px black; 
                 width: 200px;"></div>
             </div>
+        </div>
 
+        <div class="row">
+            <div class="card-code">
+                <div class="card-code__top">
+                    <p>CSS Code:</p>
+                    <button class="copy-button" onclick="copyText()">Copy</button>
+                </div>
+                <div class="card-code__codes">box-shadow: 8px 8px 24px 0px;</div>
+            </div>
         </div>
     </div>
 
