box-generator inputs ispravlen | last commit 07.09.2024

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <p>CSS Code:</p>
                     <button class="copy-button" onclick="copyText()">Copy</button>
                 </div>
-                <div class="card-code__codes">box-shadow: 8px 8px 24px 0px;</div>
+                <div class="card-code__codes"></div>
             </div>
         </div>
     </div>
