--- a/index.html
+++ b/index.html
@@ -19,23 +19,25 @@
             <div class="box-generator__first">
                 <div class="box-generator__horizontal">
                     <p class="box-generator__title">Horizontal offset</p>
-                    <input class="number-horizontal" type="number" min="-50" value="8" max="50">
-                    <input class="input-horizontal" id="range" type="range" min="-50" value="8" max="50">
+                    <input type="number" min="-50" value="8" max="50">
+                    <input class="input-horizontal" type="range" min="-50" value="8" max="50">
                 </div>
                 <div class="box-generator__vertical">
                     <p class="box-generator__title">Vertical</p>
-                    <input class="number-vertical" type="number" min="-50" value="8" max="50">
-                    <input class="input-vertical" id="range" type="range" min="-50" value="8" max="50">
+
+                    <input type="number" min="-50" value="8" max="50">
+                    <input class="input-vertical" type="range" min="-50" value="8" max="50">
+
                 </div>
                 <div class="box-generator__blur">
                     <p class="box-generator__title">Blur</p>
-                    <input class="number-blur" type="number" min="-50" value="0" max="50">
-                    <input class="input-blur" id="range" type="range" min="0" value="24" max="50">
+                    <input type="number" min="-50" value="0" max="50">
+                    <input class="input-blur" type="range" min="0" value="24" max="50">
                 </div>
                 <div class="box-generator__spread">
                     <p class="box-generator__title">Spread</p>
-                    <input class="number-spread" type="number" min="-50" value="0" max="50">
-                    <input class="input-spread" id="range" type="range" min="-50" value="0" max="50">
+                    <input type="number" min="-50" value="0" max="50">
+                    <input class="input-spread" type="range" min="-50" value="0" max="50">
                 </div>
                 <div class="box-generator__inset">
                     <input id="input-inset" type="checkbox">
@@ -47,7 +49,7 @@
                 <div class="box-generato__width">
                     <p class=" box-generator__title">Width</p>
                     <input class="number-width" type="number" min="100" value="200" max="300">
-                    <input class="input-width" id="range" type="range" min="100" value="200" max="300">
+                    <input class="input-width" type="range" min="100" value="200" max="300">
                 </div>
             </div>
             <div class="box-generator__second">
