add javascript component [boxshadow] | last commit 08.09.2024

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
             <div class="card-code">
                 <div class="card-code__top">
                     <p>CSS Code:</p>
-                    <button class="copy-button" onclick="copyText()">Copy</button>
+                    <button class="copy-button">Copy</button>
                 </div>
                 <div class="card-code__codes"></div>
             </div>
         </div>
     </div>
 
-    <script src="./js/index.js"></script>
+    <script src="./js/index.js" type="module"></script>
 </body>
 
 </html>
