compelete task checkbox style | last commit 08.09.2024

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
                     <input class="input-spread" type="range" min="-50" value="0" max="50">
                 </div>
                 <div class="box-generator__inset">
-                    <input id="input-inset" type="checkbox">
+                    <div class="checkbox">
+                        <input id="input-inset" type="checkbox">
+                        <label class="label-checkbox" for="input-inset"></label>
+                    </div>
                     <p>inset</p>
                     <input id="input-color" type="color">
                     <p>color</p>
