box-generator add opacity inputs | last commit 07.09.2024

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
                     <p>color</p>
                 </div>
 
+                <div class="box-generato__opacity">
+                    <p class=" box-generator__title">Opacity</p> 
+                    <input class="number-opacity" type="number" min="0" value="0.5" max="1" step="0.1">
+                    <input class="input-opacity" type="range" min="0" value="0.5" max="1" step="0.1">
+                </div>
+
                 <div class="box-generato__width">
                     <p class=" box-generator__title">Width</p>
                     <input class="number-width" type="number" min="100" value="200" max="300">
