box-generator | last commit 11.09.2024

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="box-generator__inset">
                     <div class="checkbox">
                         <input id="input-inset" type="checkbox">
-                        <label class="label-checkbox" for="input-inset"></label>
+                        <label class="checkbox__label" for="input-inset"></label>
                     </div>
                     <p>inset</p>
                     <input id="input-color" type="color">
@@ -50,9 +50,9 @@
                 </div>
 
                 <div class="box-generato__opacity">
-                    <p class=" box-generator__title">Opacity</p> 
-                    <input class="number-opacity" type="number" min="0" value="0.5" max="1" step="0.1">
-                    <input class="input-opacity" type="range" min="0" value="0.5" max="1" step="0.1">
+                    <p class=" box-generator__title">Opacity</p>
+                    <input class="number-opacity" type="number" min="0" value="0.5" max="1" step="0.01">
+                    <input class="input-opacity" type="range" min="0" value="0.5" max="1" step="0.01">
                 </div>
 
                 <div class="box-generato__width">
