--- a/index.html
+++ b/index.html
@@ -224,12 +224,12 @@
         </div>
     </div>
 
-    <section class="ari_faq">
+    <section class="ari-faq">
         <div class="container --faq">
-            <div class="ari_faq__list">
-                <details class="ari_faq__item">
-                    <summary class="ari_faq__capt">What is Autodesk software used for?</summary>
-                    <div class="ari_faq__desk">
+            <div class="ari-faq__list">
+                <details class="ari-faq__item">
+                    <summary class="ari-faq__capt">What is Autodesk software used for?</summary>
+                    <div class="ari-faq__desk">
                         <p>Autodesk's broad portfolio of products and services enables our customers to foster
                             innovation,
                             optimize and improve their designs, save time and money, improve quality, communicate plans,
@@ -257,9 +257,9 @@
                         </p>
                     </div>
                 </details>
-                <details class="ari_faq__item">
-                    <summary class="ari_faq__capt">What is the difference between AutoCAD and Autodesk?</summary>
-                    <div class="ari_faq__desk">
+                <details class="ari-faq__item">
+                    <summary class="ari-faq__capt">What is the difference between AutoCAD and Autodesk?</summary>
+                    <div class="ari-faq__desk">
                         <p>Autodesk is the company that makes software for people who make things. AutoCAD is one of the
                         </p>
                         software subscriptions that Autodesk has developed and offers to designers around the globe.
@@ -267,36 +267,36 @@
                         professionals rely on to create precise 2D and 3D drawings..
                     </div>
                 </details>
-                <details class="ari_faq__item">
-                    <summary class="ari_faq__capt">How can I convert my Autodesk software trial to a paid subscription?
+                <details class="ari-faq__item">
+                    <summary class="ari-faq__capt">How can I convert my Autodesk software trial to a paid subscription?
                     </summary>
                     <div class="ari_faq__desk">
                         Launch your trial, click the <b>SUBSCRIBE NOW</b> button, and follow the necessary steps to
                         purchase your subscription. Once your purchase is complete, simply relaunch the product to have
                         immediate access to your subscription. No need to download or install the product again. For
                         additional help, visit the <br>
-                        <a class="ari_faq__link" href="#">Autodesk Knowledge Network.</a>
+                        <a class="ari-faq__link" href="#">Autodesk Knowledge Network.</a>
                     </div>
                 </details>
-                <details class="ari_faq__item">
-                    <summary class="ari_faq__capt">Can I switch to subscription from a maintenance plan?</summary>
-                    <div class="ari_faq__desk">
+                <details class="ari-faq__item">
+                    <summary class="ari-faq__capt">Can I switch to subscription from a maintenance plan?</summary>
+                    <div class="ari-faq__desk">
                         Yes. To help customers transition to a named user plan, new trade-in offers will be available
                         starting May2020.
-                        <a class="ari_faq__link" href="#">Learn more about our trade-in offers</a>
+                        <a class="ari-faq__link" href="#">Learn more about our trade-in offers</a>
                     </div>
                 </details>
-                <details class="ari_faq__item">
-                    <summary class="ari_faq__capt">How do I renew my license?</summary>
-                    <div class="ari_faq__desk">
+                <details class="ari-faq__item">
+                    <summary class="ari-faq__capt">How do I renew my license?</summary>
+                    <div class="ari-faq__desk">
                         Software renewal varies depending on how you purchased your subscription. For detailed renewal
                         instructions, visit
-                        <a class="ari_faq__link" href="#">How to renew your subscription</a>
+                        <a class="ari-faq__link" href="#">How to renew your subscription</a>
                     </div>
                 </details>
-                <details class="ari_faq__item">
-                    <summary class="ari_faq__capt">Where can I buy Autodesk software?</summary>
-                    <div class="ari_faq__desk">
+                <details class="ari-faq__item">
+                    <summary class="ari-faq__capt">Where can I buy Autodesk software?</summary>
+                    <div class="ari-faq__desk">
                         <p>We’re glad you asked!</p>
 
                         <p>Your fastest option is to subscribe to any of our most popular Autodesk products directly on
@@ -304,39 +304,39 @@
 
                         <p>Talk to a sales representative by calling 1-844-664-8618.</p>
 
-                        <p>Find an <a class="ari_faq__link" href="#">authorized reseller</a>.</p>
+                        <p>Find an <a class="ari-faq__link" href="#">authorized reseller</a>.</p>
                     </div>
                 </details>
-                <details class="ari_faq__item">
-                    <summary class="ari_faq__capt">Can I install Autodesk software on multiple computers?</summary>
-                    <div class="ari_faq__desk">
+                <details class="ari-faq__item">
+                    <summary class="ari-faq__capt">Can I install Autodesk software on multiple computers?</summary>
+                    <div class="ari-faq__desk">
                         Your subscription software can be installed on up to three devices. However, only the named user
                         can sign in and use that software on a single computer at any given time. Please refer to the
-                        <a class="ari_faq__link" href="#">Terms of Use</a> for more information.
+                        <a class="ari-faq__link" href="#">Terms of Use</a> for more information.
                     </div>
                 </details>
-                <details class="ari_faq__item">
+                <details class="ari-faq__item">
                     <summary class="ari_faq__capt">Can I buy Autodesk software without a subscription?</summary>
-                    <div class="ari_faq__desk">
+                    <div class="ari-faq__desk">
                         Autodesk software is only available as a subscription. Learn more about the <a
-                            class="ari_faq__link" href="#">benefits of subscription</a>.
+                            class="ari-faq__link" href="#">benefits of subscription</a>.
                     </div>
                 </details>
-                <details class="ari_faq__item">
-                    <summary class="ari_faq__capt">Who uses Autodesk software?</summary>
-                    <div class="ari_faq__desk">
+                <details class="ari-faq__item">
+                    <summary class="ari-faq__capt">Who uses Autodesk software?</summary>
+                    <div class="ari-faq__desk">
                         Autodesk is a global leader in design and make software for the architecture, engineering,
                         construction, media and entertainment, and manufacturing industries. If you’ve ever driven a
                         high-performance car, admired a towering skyscraper, used a smartphone, or watched a great film,
                         chances are you've experienced what millions of Autodesk customers have built with our software.
                     </div>
                 </details>
-                <details class="ari_faq__item">
-                    <summary class="ari_faq__capt">What happened to perpetual licenses?</summary>
-                    <div class="ari_faq__desk">
+                <details class="ari-faq__item">
+                    <summary class="ari-faq__capt">What happened to perpetual licenses?</summary>
+                    <div class="ari-faq__desk">
                         As of August 1, 2016, we have phased out perpetual licenses of our software for Autodesk
                         products worldwide. Take advantage of subscription benefits by purchasing <a
-                            class="ari_faq__link" href="#">here</a>.
+                            class="ari-faq__link" href="#">here</a>.
                     </div>
                 </details>
             </div>
