new section collection | last commit 11.09.2024

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                 <details class="ari-faq__item">
                     <summary class="ari-faq__capt">How can I convert my Autodesk software trial to a paid subscription?
                     </summary>
-                    <div class="ari_faq__desk">
+                    <div class="ari-faq__desk">
                         Launch your trial, click the <b>SUBSCRIBE NOW</b> button, and follow the necessary steps to
                         purchase your subscription. Once your purchase is complete, simply relaunch the product to have
                         immediate access to your subscription. No need to download or install the product again. For
@@ -316,7 +316,7 @@
                     </div>
                 </details>
                 <details class="ari-faq__item">
-                    <summary class="ari_faq__capt">Can I buy Autodesk software without a subscription?</summary>
+                    <summary class="ari-faq__capt">Can I buy Autodesk software without a subscription?</summary>
                     <div class="ari-faq__desk">
                         Autodesk software is only available as a subscription. Learn more about the <a
                             class="ari-faq__link" href="#">benefits of subscription</a>.
@@ -339,6 +339,74 @@
                             class="ari-faq__link" href="#">here</a>.
                     </div>
                 </details>
+            </div>
+        </div>
+    </section>
+
+    <section class="collection">
+        <div class="container --faq">
+            <div class="collection__flex">
+                <div class="collection__first">
+                    <div class="collection__top">
+                        <div class="collection__title">
+                            <img class="group-image" src="./image/collection.png" alt="#">
+                            Product Design & Manufacturing Collection
+                        </div>
+                        <h3 class="collection__title-two">Extend the capabilities of Inventor with the collection</h3>
+                        <div class="collection__subtitle">The collection is a powerful set of applications that provides
+                            extended capabilities to Inventor and AutoCAD for engineers who design complex and custom
+                            products, equipment, and systems.</div>
+                    </div>
+                    <div class="collection__block-product">
+                        <div class="collection__block-top">Product Design & Manufacturing Collection includes:</div>
+
+                        <div class="collection__group-grid">
+                            <div class="collection__item">
+                                <img class="group-image" src="./image/autoCAD.png" alt="#">autoCAD
+                            </div>
+                            <div class="collection__item">
+                                <img class="group-image" src="./image/fusion.png" alt="#">Fusion
+                            </div>
+                            <div class="collection__item">
+                                <img class="group-image" src="./image/inventor.png" alt="#">Inventor Tolerance Analysis
+                            </div>
+                            <div class="collection__item">
+                                <img class="group-image" src="./image/inventor.png" alt="#">Inventor Nastran
+                            </div>
+                            <div class="collection__item">
+                                <img class="group-image" src="./image/factory.png" alt="#">Factory Design Utilities
+                            </div>
+                            <div class="collection__item">
+                                <img class="group-image" src="./image/autoCAD.png" alt="#">autoCAD
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="collection__second">
+                    <div class="collection__learn">Learn how you can do more with Inventor</div>
+                    <div class="collection__video">
+                        <a href="https://videos.autodesk.com/zencoder/content/dam/autodesk/www/products/autodesk-inventor-family/fy24/overview/videos/pdmc-2d-plus-3d-2023-video-1920x1080.mp4">
+                            <img src="./image/video-1.png" alt="#">
+                        </a>
+                        <div class="collection__video-title">
+                            <h2>Best practices for 2D and 3D design</h2>
+                            Work in Inventor and AutoCAD to unlock capabilities that benefit the entire product development
+                            cycle. (Watch video 1:50 min.)
+                            <a href="#">Learn more</a>
+                        </div>
+                    </div>
+                    <div class="collection__video">
+                        <a href="https://videos.autodesk.com/zencoder/content/dam/autodesk/www/products/autodesk-inventor-family/fy24/overview/videos/pdmc-professional-grade-3d-cad-software-2023-video-1920x1080.mp4">
+                            <img src="./image/video-2.png" alt="#">
+                        </a>
+                        <div class="collection__video-title">
+                            <h2>Explore a complete product development solution</h2>
+                            See how integrated tools for Inventor bring your designs to life. Model courtesy of Joel Maia. (Video 2:34 min.)
+                            <a href="#">Learn more</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
