complete section collection | last commit 11.09.2024

--- a/index.html
+++ b/index.html
@@ -386,23 +386,22 @@
                 <div class="collection__second">
                     <div class="collection__learn">Learn how you can do more with Inventor</div>
                     <div class="collection__video">
-                        <a href="https://videos.autodesk.com/zencoder/content/dam/autodesk/www/products/autodesk-inventor-family/fy24/overview/videos/pdmc-2d-plus-3d-2023-video-1920x1080.mp4">
-                            <img src="./image/video-1.png" alt="#">
-                        </a>
+                        <img class="collection-video-btn-1" src="./image/video-1.png" alt="#">
                         <div class="collection__video-title">
                             <h2>Best practices for 2D and 3D design</h2>
-                            Work in Inventor and AutoCAD to unlock capabilities that benefit the entire product development
+                            Work in Inventor and AutoCAD to unlock capabilities that benefit the entire product
+                            development
                             cycle. (Watch video 1:50 min.)
                             <a href="#">Learn more</a>
                         </div>
                     </div>
                     <div class="collection__video">
-                        <a href="https://videos.autodesk.com/zencoder/content/dam/autodesk/www/products/autodesk-inventor-family/fy24/overview/videos/pdmc-professional-grade-3d-cad-software-2023-video-1920x1080.mp4">
-                            <img src="./image/video-2.png" alt="#">
-                        </a>
+                        <!-- <a href="https://videos.autodesk.com/zencoder/content/dam/autodesk/www/products/autodesk-inventor-family/fy24/overview/videos/pdmc-professional-grade-3d-cad-software-2023-video-1920x1080.mp4"> -->
+                        <img class="collection-video-btn-2" src="./image/video-2.png" alt="#">
                         <div class="collection__video-title">
                             <h2>Explore a complete product development solution</h2>
-                            See how integrated tools for Inventor bring your designs to life. Model courtesy of Joel Maia. (Video 2:34 min.)
+                            See how integrated tools for Inventor bring your designs to life. Model courtesy of Joel
+                            Maia. (Video 2:34 min.)
                             <a href="#">Learn more</a>
                         </div>
                     </div>
@@ -445,6 +444,22 @@
         </div>
 
         <div class="basket__close" closeBasket>X</div>
+    </dialog>
+
+    <dialog class="video-first">
+        <div class="video-first__container">
+            <div class="video-close"></div>
+            <video class="video"
+                src="https://videos.autodesk.com/zencoder/content/dam/autodesk/www/products/autodesk-inventor-family/fy24/overview/videos/pdmc-2d-plus-3d-2023-video-1920x1080.mp4" controls></video>
+        </div>
+    </dialog>
+
+    <dialog class="video-second">
+        <div class="video-first__container">
+            <div class="video-close"></div>
+            <video class="video-two"
+                src="https://videos.autodesk.com/zencoder/content/dam/autodesk/www/products/autodesk-inventor-family/fy24/overview/videos/pdmc-professional-grade-3d-cad-software-2023-video-1920x1080.mp4" controls></video>
+        </div>
     </dialog>
 
     <script src="./js/index.js"></script>
