complete section ar-imagine | last commit 11.09.2024

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="products__bottom">
                     <div class="products__button">
                         <button>View in-depth comparison</button>
@@ -490,11 +490,53 @@
 
                     <div class="products__bottom-right">
                         <p>Capabilsite</p>
-                        <div class="products__bottom-element"><div class="products__circle --black"></div>comprehensive</div>
-                        <div class="products__bottom-element"><div class="products__circle --smoke"></div>Unmited</div>
-                        <div class="products__bottom-element"><div class="products__circle --white"></div>N/A</div>
+                        <div class="products__bottom-element">
+                            <div class="products__circle --black"></div>comprehensive
+                        </div>
+                        <div class="products__bottom-element">
+                            <div class="products__circle --smoke"></div>Unmited
+                        </div>
+                        <div class="products__bottom-element">
+                            <div class="products__circle --white"></div>N/A
+                        </div>
                     </div>
                 </div>
+        </section>
+    </div>
+
+    <div class="container --faq">
+        <section class="ar-imagine">
+            <div class="ar-imagine__info">
+                <div class="ar-imagine__title">if you can imagine it, you can design it in Autodesk Revit</div>
+                <div class="ar-imagine__subtitle">Autodesk Revit allow architects, engineers, and construction
+                    professionals to:</div>
+
+                <ul class="ar-imagine__elements">
+                    <li class="ar-imagine__item">Model shapes, structures, and systems in 3D with parametric
+                        accuracy, precision, and ease.</li>
+                    <li class="ar-imagine__item">Streamline project management with instant revisions to plans,
+                        elevations, schedules, sections, sheets, and 3D visualizations.</li>
+                    <li class="ar-imagine__item">Unite multidisciplinary project teams for higher efficiency,
+                        collaboration, and impact in the office or on the jobsite.
+                    </li>
+                </ul>
+
+                <div class="ar-imagine__bottom">
+                    <a class="ar-imagine__see-link" href="#">See system requirements <span class="ari-winsvg"></span></a>
+                    <a class="ar-imagine__link" href="#"><span class="ari-arrowright"></span>Buy Revit in the AEC Collection</a>
+                </div>
+            </div>
+
+            <div class="ar-imagine__card">
+                <div class="ar-imagine__video" data-video="first"><video src="https://help.autodesk.com/videos/23b423f0-fd85-11ee-a103-9d5647070b99/video.mp4" controls></video></div>
+                <div class="ar-imagine__video --hide-video" data-video="second"><video src="https://help.autodesk.com/videos/23ae0970-fd85-11ee-a103-9d5647070b99/video.webm" controls></video></div>
+                <div class="ar-imagine__images">
+                    <div class="ar-imagine__image-video"><img class="video-poster-1 --select" data-video="first" src="./image/poster-1.jpeg" alt="#"></div>
+                    <div class="ar-imagine__image-video"><img class="video-poster-2" data-video="second" src="./image/poster-2.jpeg" alt="#"></div>
+                </div>
+                <div class="ar-imagine__footer" data-video="first">Lake|Flato’s adaptive reuse project (video: 3:45 min.)</div>
+                <div class="ar-imagine__footer --hide" data-video="second">Warren and Mahoney restored ChristChurch Cathedral after earthquake (video: 4:15 min.)</div>
+            </div>
         </section>
     </div>
 
