complete task [footer] | last commit 22.09.2024

--- a/index.html
+++ b/index.html
@@ -522,23 +522,110 @@
                 </ul>
 
                 <div class="ar-imagine__bottom">
-                    <a class="ar-imagine__see-link" href="#">See system requirements <span class="ari-winsvg"></span></a>
-                    <a class="ar-imagine__link" href="#"><span class="ari-arrowright"></span>Buy Revit in the AEC Collection</a>
+                    <a class="ar-imagine__see-link" href="#">See system requirements <span
+                            class="ari-winsvg"></span></a>
+                    <a class="ar-imagine__link" href="#"><span class="ari-arrowright"></span>Buy Revit in the AEC
+                        Collection</a>
                 </div>
             </div>
 
             <div class="ar-imagine__card">
-                <div class="ar-imagine__video" data-video="first"><video src="https://help.autodesk.com/videos/23b423f0-fd85-11ee-a103-9d5647070b99/video.mp4" controls></video></div>
-                <div class="ar-imagine__video --hide-video" data-video="second"><video src="https://help.autodesk.com/videos/23ae0970-fd85-11ee-a103-9d5647070b99/video.webm" controls></video></div>
+                <div class="ar-imagine__video" data-video="first"><video
+                        src="https://help.autodesk.com/videos/23b423f0-fd85-11ee-a103-9d5647070b99/video.mp4"
+                        controls></video></div>
+                <div class="ar-imagine__video --hide-video" data-video="second"><video
+                        src="https://help.autodesk.com/videos/23ae0970-fd85-11ee-a103-9d5647070b99/video.webm"
+                        controls></video></div>
                 <div class="ar-imagine__images">
-                    <div class="ar-imagine__image-video"><img class="video-poster-1 --select" data-video="first" src="./image/poster-1.jpeg" alt="#"></div>
-                    <div class="ar-imagine__image-video"><img class="video-poster-2" data-video="second" src="./image/poster-2.jpeg" alt="#"></div>
+                    <div class="ar-imagine__image-video"><img class="video-poster-1 --select" data-video="first"
+                            src="./image/poster-1.jpeg" alt="#"></div>
+                    <div class="ar-imagine__image-video"><img class="video-poster-2" data-video="second"
+                            src="./image/poster-2.jpeg" alt="#"></div>
                 </div>
-                <div class="ar-imagine__footer" data-video="first">Lake|Flato’s adaptive reuse project (video: 3:45 min.)</div>
-                <div class="ar-imagine__footer --hide" data-video="second">Warren and Mahoney restored ChristChurch Cathedral after earthquake (video: 4:15 min.)</div>
+                <div class="ar-imagine__footer" data-video="first">Lake|Flato’s adaptive reuse project (video: 3:45
+                    min.)</div>
+                <div class="ar-imagine__footer --hide" data-video="second">Warren and Mahoney restored ChristChurch
+                    Cathedral after earthquake (video: 4:15 min.)</div>
             </div>
         </section>
     </div>
+
+    <footer class="footer">
+        <div class="container --faq">
+            <div class="footer__block">
+                <div class="footer__card">
+                    <div class="footer__top">Autodesk</div>
+                    <div class="footer__links">
+                        <a href="#">Company overview</a>
+                        <a href="#">Careers</a>
+                        <a href="#">Investor relations</a>
+                        <a href="#">Autodesk Trust Center</a>
+                        <a href="#">Newsroom</a>
+                        <a href="#">Diversity and belonging</a>
+                        <a class="last-links" href="#">
+                            <span class="ari-facebook-circle"></span>
+                            <span class="ari-instagram-circle"></span>
+                            <span class="ari-twitter-circle"></span>
+                            <span class="ari-linkedin-circle"></span>
+                            <span class="ari-youtube"></span>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="footer__card">
+                    <div class="footer__links --second">
+                        <a href="#">Autodesk Foundation</a>
+                        <a href="#">Sustainability</a>
+                        <a href="#">Contact us</a>
+                        <a href="#">Students and educators</a>
+                        <a href="#">Affiliate program</a>
+                        <a href="#">Diversity and belonging</a>
+                        <a href="#">Design & Make with Autodesk</a>
+                    </div>
+                </div>
+
+                <div class="footer__card">
+                    <div class="footer__top">How to buy</div>
+                    <div class="footer__links">
+                        <a href="#">View all products</a>
+                        <a href="#">Buying with Autodesk</a>
+                        <a href="#">Renewal options</a>
+                        <a href="#">Find a reseller</a>
+                        <a href="#">Sales and refunds</a>
+                        <a href="#">Choose your subscription plan</a>
+                        <a href="#">Pay as you go with Flex</a>
+                    </div>
+                </div>
+
+                <div class="footer__card">
+                    <div class="footer__top">Support</div>
+                    <div class="footer__links">
+                        <a href="#">Product support</a>
+                        <a href="#">Manage your account</a>
+                        <a href="#">Download and install software</a>
+                        <a href="#">Autodesk Product Status</a>
+                        <a href="#">Education support</a>
+                        <a href="#">Contact support</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </footer>
+
+    <section class="footer-bottom">
+        <div class="container --faq">
+            <div class="footer-bottom__items">
+                <li class="footer-bottom__item"><a href="#">Privacy</a></li>
+                <li class="footer-bottom__item"><a href="#">Do not sell or share my personal information</a></li>
+                <li class="footer-bottom__item"><a href="#">Cookie preferences</a></li>
+                <li class="footer-bottom__item"><a href="#">Report noncompliance</a></li>
+                <li class="footer-bottom__item"><a href="#">Terms of use</a></li>
+                <li class="footer-bottom__item"><a href="#">Legal</a></li>
+                <li class="footer-bottom__item">© 2024 Autodesk Inc. All rights reserved</li>
+            </div>
+        </div>
+    </section>
 
     <dialog class="basket">
         <div class="basket__wrap">
